class ObservadorEstado {
  atualizar(estado) {
    throw new Error('atualizar() não implementado');
  }
}

module.exports = ObservadorEstado;
